--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <button>Specify Size</button>
   <div id="container"></div>
   <script src="script.js"></script>
 </body>
